--- a/src/web/stylesheets/headers.scss
+++ b/src/web/stylesheets/headers.scss
@@ -6,3 +6,12 @@
   padding: 10px 15px;
   border-bottom: 1px solid #d3d3d3;
 }
+
+.header__flex-end {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  background-color: #fff;
+  padding: 10px 15px;
+  border-bottom: 1px solid #d3d3d3;
+}
