--- a/src/web/stylesheets/headers.scss
+++ b/src/web/stylesheets/headers.scss
@@ -4,14 +4,10 @@
   justify-content: space-between;
   background-color: #fff;
   padding: 10px 15px;
-  border-bottom: 1px solid #d3d3d3;
+  background-color: #f5f6fa;
 }
 
-.header__flex-end {
+.flex-end {
   display: flex;
-  align-items: center;
   justify-content: flex-end;
-  background-color: #fff;
-  padding: 10px 15px;
-  border-bottom: 1px solid #d3d3d3;
 }
