--- a/src/web/stylesheets/onboarding.scss
+++ b/src/web/stylesheets/onboarding.scss
@@ -1,5 +1,5 @@
 .onboarding {
-  background-color: #f9f9f9;
+  background-color: #f5f6fa;
   width: 100%;
   height: calc(100% - 64px);
   display: flex;
