--- a/src/web/stylesheets/sidebar.scss
+++ b/src/web/stylesheets/sidebar.scss
@@ -1,12 +1,21 @@
 .sidebar {
+  height: 100vh;
+  width: 200px;
+}
+
+.sidebar__logo {
   height: 64px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.title {
+.sidebar__title {
   margin: 0;
   font-size: 16px;
-  color: #fff;
+  color: #000;
+}
+
+.sidebar__menu {
+  margin-left: 12px;
 }
