Add some stylesheets

--- a/src/web/stylesheets/app.css
+++ b/src/web/stylesheets/app.css
@@ -8,6 +8,7 @@
 @import './team.scss';
 @import './sidebar.scss';
 @import './button.scss';
+@import './conferenceStanding.scss';
 
 body {
   margin: 0;
