Import newly named player.scss

--- a/src/web/stylesheets/app.css
+++ b/src/web/stylesheets/app.css
@@ -3,7 +3,7 @@
 @import './dashboard.scss';
 @import './form.scss';
 @import './onboarding.scss';
-@import './players.scss';
+@import './player.scss';
 @import './headers.scss';
 @import './team.scss';
 @import './sidebar.scss';
