--- a/src/web/stylesheets/player.scss
+++ b/src/web/stylesheets/player.scss
@@ -1,4 +1,3 @@
-// page.jsx
 .cards__container {
   display: flex;
   flex-direction: column;
@@ -30,10 +29,6 @@
   margin-left: 25px;
 }
 
-.horizontal__padding {
-  padding: 0 20px;
-}
-
 .player-stats__container {
   width: 100%;
   margin-top: 15px;
@@ -42,4 +37,9 @@
 
 .players__row {
   cursor: pointer;
+}
+
+.search__container {
+  width: 400px;
+  margin-bottom: 20px;
 }
