Add Season Leaders section

--- a/src/web/stylesheets/app.css
+++ b/src/web/stylesheets/app.css
@@ -9,6 +9,7 @@
 @import './button.scss';
 @import './conferenceStanding.scss';
 @import './comparison.scss';
+@import './leaders.scss';
 
 body {
   margin: 0;
